<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Qibla Direction</string>
    <string name="prayer_times">Prayer Times</string>
    <string name="dummy_location">142,142, Rawalpindi, Pakistan</string>
    <string name="dummy_ptrayer">Fajar</string>
    <string name="dummy_prayer_time">5:27 AM</string>
    <string name="tasbigCounter">Tasbih Counter</string>
    <string name="calender">Calender</string>
    <string name="dummy_date">12 December, 2023</string>
    <string name="dummy_event">Shab-e-Miraj</string>
    <string name="navigation_drawer_open">open_drawer</string>
    <string name="navigation_drawer_close">close_drawer</string>
    <string name="onborading_tasbeeh_desc">Using a tasbih counter helps individuals focus on their prayers and maintain a count of their repetitions. The act of engaging in tasbeeh is seen as a way to remember and draw closer to Allah in everyday life.</string>

    <style name="CalendarDateText">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">@color/black</item>
    </style>

    <style name="CalendarWeekDayText">
        <item name="android:textSize">14sp</item>
    </style>


    <string name="title_activity_events_bottom_sheet">EventsBottomSheet</string>
    <string name="title_home">Home</string>
    <string name="title_prayer">Prayers</string>
    <string name="title_count">Tasbeeh</string>
    <string name="title_names">Names</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_new_event">Add New Event</string>
    <string name="add_dhikr">Add Dhikr</string>
    <string name="event_name_hint">Event name*</string>
    <string name="dhikr_name_hint">Dhikr name*</string>
    <string name="typenote_hint">Type the note here...</string>
    <string name="date_hint">Date</string>
    <string name="add_custom_limit_hint">Add Custom Limit</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="create_event">Create Event</string>
    <string name="confirm">Confirm</string>
    <string name="hijri">Hijri</string>
    <string name="locked">Locked</string>
    <string name="onboarding_1_description">Locate the Qibla, wherever you are.It\'s so easy to use.There is no need to enter your location manually.The build in compass shows you the direction to Mecca for required prayer.</string>
    <string name="permission_required">Location permission is required to access the Prayers list</string>

    <string name="language_header">Languages</string>
    <string name="onborading_salat_reminder_desc">Locate the Qibla, wherever you are.It\'s so easy to use.There is no need to enter your location manually.The build in compass shows you the direction to Mecca for required prayer.</string>
    <string name="salat_reminder">Salat Reminder</string>
    <string name="tasbih_counter">Tasbih Counter</string>
    <string name="no_date_found">No date Found</string>
    <string name="no_location_found">No Location Found</string>
    <string name="prayer_notification_status">Prayer Notification Status</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="coming_prayer_in_the_list">Coming Prayer in the List</string>
    <string name="hijri_date">Hijri Date</string>
    <string name="events">Events</string>
    <string name="qibla_ndirection">Qibla\nDirection</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="languages">Languages</string>
    <string name="calender_events">Calender/Events</string>
    <string name="share_app">Share App</string>
    <string name="more_apps">More Apps</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="location_permission_required">Location Permission Required</string>
    <string name="don_t_allow">DON\'T ALLOW</string>
    <string name="allow">ALLOW</string>
    <string name="location_permission_desc">Need location permission for accurate prayer times and qibla direction.</string>
    <string name="notification_permission_required">Notification Permission Required</string>
    <string name="notification_permission_desc">Need notification permission to get notification at prayer times.</string>
    <string name="visit_privacy">Do you want to visit privacy policy?</string>
    <string name="delete">Delete</string>
    <string name="delete_dhikr_desc">Do you want to delete a Dhikr?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="save">Save</string>
    <string name="save_dhikr">Do you want to save a Dhikr?</string>
    <string name="more_apps_desc">Do you want to visit More Apps?</string>
    <string name="share_app_desc">Do you want to share this App?</string>
    <string name="reset_dhikr">Reset Dhikr</string>
    <string name="reset_dhikr_desc">Are you sure you want to reset?</string>
    <string name="delete_event">Delete Event</string>
    <string name="delete_event_desc">Do you want to delete event from a list?</string>
    <string name="exit">Exit?</string>
    <string name="exit_desc">Are you sure you want to exit app?</string>
    <string name="rate">Rate Us</string>
    <string name="qibla_direction">Qibla\nDirection</string>
    <string name="direction">Direction</string>
    <string name="qibla">Qibla</string>
    <string name="start_over">Start Over?</string>
    <string name="do_you_want_to_start_over">Do you want to start over?</string>
    <string name="count">"Count "</string>
    <string name="saved_on">"Saved on "</string>
</resources>