<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Qibla"
        android:title="@string/title_home"
        android:icon="@drawable/home_selected_icon"
        android:iconTint="@color/theme"
        app:actionLayout="@layout/menu_item_layout"
        />

    <item
        android:id="@+id/Prayers"
        android:title="@string/prayer_times"
        android:icon="@drawable/prayers_unselected_icon"
        android:iconTint="@color/theme"
        app:actionLayout="@layout/menu_item_layout"
        />

    <item
        android:id="@+id/Tasbeeh"
        android:title="@string/title_count"
        android:iconTint="@color/theme"
        android:icon="@drawable/tasbeeh_icon"
        app:actionLayout="@layout/menu_item_layout"
        />

    <item
        android:id="@+id/Names"
        android:title="@string/title_names"
        android:iconTint="@color/theme"
        android:icon="@drawable/names_unselected_icon__2_"
        app:actionLayout="@layout/menu_item_layout"
        />

</menu>
