<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.EventsBottomSheet"
    >

    <TextView
        android:id="@+id/add_event_header_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_new_event"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_10sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eventName_ET_layout_id"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/add_event_header_id"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventName_ET_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_ET_layout_id"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/eventName_ET_layout_id"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_ET_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            android:drawableEnd="@drawable/event_calender_icon" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginVertical="@dimen/_20sdp"
        android:id="@+id/starttime_ET_layout_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/endtime_ET_layout_id"
        app:layout_constraintTop_toBottomOf="@+id/date_ET_layout_id"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintHorizontal_chainStyle="packed"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/starttime_ET_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/starttime"
            android:drawableEnd="@drawable/event_time_icon" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/endtime_ET_layout_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/starttime_ET_layout_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_ET_layout_id"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/endtime_ET_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endtime"
            android:drawableEnd="@drawable/event_time_icon" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/create_event_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starttime_ET_layout_id">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/theme">
            
            <TextView
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_event"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>