<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    android:paddingHorizontal="@dimen/_10sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_45sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:id="@+id/text_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_dhikr"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/header"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/dontAllow_id"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toStartOf="@+id/allow_id"
                app:cardBackgroundColor="@color/light_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_location"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"/>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/allow_id"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintStart_toEndOf="@+id/dontAllow_id"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardBackgroundColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_location"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/no"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"/>


            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/save_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/location_img_id"
        android:elevation="@dimen/_10sdp"/>


</androidx.constraintlayout.widget.ConstraintLayout>